--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 node_modules/
 node_modules
 
-/server/package-lock
-/server/package.json
-/package-lock.json
 
-/client/package.json
-/client/package-lock.json
+/server/.env
 
 /client/.env.local
 /client/.env.development.local
@@ -16,3 +12,4 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
