added mongo db connection url

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION=""
+DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
