--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/RestaurantManager?retryWrites=true&w=majority"
+secretOrKey="secretOrKey"
