--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "firebase": "^8.2.10",
     "is-empty": "^1.2.0",
@@ -24,6 +25,7 @@
     "redux-thunk": "^2.3.0",
     "simple-react-footer": "^1.0.2",
     "styled-components": "^5.2.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
