--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/RestaurantManager?retryWrites=true&w=majority"
 secretOrKey="secretOrKey"
+THE_EMAIL="barnkslink@gmail.com"
+
+THE_PASSWORD="Nyit2021"
