--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.10",
     "is-empty": "^1.2.0",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
