--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@date-io/date-fns": "^2.10.8",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.5",
     "firebase": "^8.2.10",
     "is-empty": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
