--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
@@ -20,6 +22,7 @@
     "react-bootstrap": "^1.4.0",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
+    "react-dom-factories": "^1.0.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
