--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "cors": "^2.8.5",
     "nodemailer": "^6.5.0",
     "puppeteer": "^8.0.0",
-    "react-datepicker": "^3.7.0"
+    "react-datepicker": "^3.7.0",
+    "react-uuid": "^1.0.2",
+    "uuid": "^8.3.2"
   }
 }
