--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
     "firebase": "^8.2.10",
+    "gulp": "^4.0.2",
     "is-empty": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.5.0",
