added forgot password and email verification functions

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
 DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/RestaurantManager?retryWrites=true&w=majority"
 secretOrKey="secretOrKey"
-
-THE_EMAIL=barnkslink@hotmail.com
-THE_PASSWORD=Nyit2021
+EMAIL="barnslink@hotmail.com"
+PASSWORD="Nyit2021"
