fixing errors on forgetpass

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 DB_CONNECTION="mongodb+srv://weewoo:weewoo@cluster0.bn4q7.mongodb.net/RestaurantManager?retryWrites=true&w=majority"
 secretOrKey="secretOrKey"
-EMAIL="barnslink@hotmail.com"
+EMAIL="barnslink@gmail.com"
 PASSWORD="Nyit2021"
