--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "gulp": "^4.0.2",
     "is-empty": "^1.2.0",
     "jwt-decode": "^3.1.2",
+    "nanoid": "^3.1.22",
     "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
